[workspace]
members = [
    "fairvm",
    "fairvm-sdk",
    "fairvm-cli",
    "timestampvm",
]
exclude = [
    "**/pb/**",
    "**/proto/pb/**",
    "**/fuzz/corpus/**",
    "**/fuzz/artifacts/**",
    "**/generated/**"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Super Fair VM Team"]
license = "Apache-2.0"

[workspace.dependencies]
avalanche-types = { path = "../avalanche-rs-main/crates/avalanche-types", features = ["subnet", "codec_base64"] }
avalanche-consensus = { path = "../avalanche-rs-main/crates/avalanche-consensus" }
tokio = { version = "1.37.0", features = ["full", "macros", "rt-multi-thread", "test-util"] }
ethers = { version = "2.0.10", features = ["abigen", "ws", "rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
hex = "0.4.3"
sha3 = "0.10.8"
sha2 = "0.10.8"  # SHA256 哈希算法
ripemd = "0.1.3" # RIPEMD-160 哈希算法
secp256k1 = { version = "0.28.2", features = ["recovery"] } # 椭圆曲线
thiserror = "1.0.51"
base64 = "0.21.7"
bytes = "1.5.0"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["cargo", "derive"] }
derivative = "2.2.0"
env_logger = "0.11.2"
http-manager = "0.0.14"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
log = "0.4.20"
semver = "1.0.21"
tonic = { version = "0.10.2", features = ["gzip"] }
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
async-trait = "0.1.77"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
missing_docs_in_private_items = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"