[package]
name = "avalanche-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Avalanche consensus implementation in Rust"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
thiserror.workspace = true
chrono.workspace = true
log.workspace = true
futures.workspace = true
futures-util.workspace = true
bytes.workspace = true
hex.workspace = true
sha3.workspace = true
sha2.workspace = true
secp256k1.workspace = true
base64.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4" 