[package]
name = "fairvm-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fairvm = { path = "../fairvm" }
fairvm-sdk = { path = "../fairvm-sdk" }
tokio.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
ethers.workspace = true
rand = "0.8"
secp256k1 = { version = "0.27", features = ["rand"] }
hex = "0.4" 