[package]
name = "fairvm-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ethers = { version = "2.0", features = ["ws", "rustls", "ledger", "trezor", "eip712"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.4"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.2"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
ecdsa = "0.16"
k256 = "0.13"
rlp = "0.5"
generic-array = "0.14"
typenum = "1.16"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tokio-test = "0.4" 
