[package]
name = "fairvm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
avalanche-types.workspace = true
avalanche-consensus.workspace = true
tokio.workspace = true
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
sha3.workspace = true
sha2.workspace = true
ripemd.workspace = true
secp256k1.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
derivative.workspace = true
env_logger.workspace = true
http-manager.workspace = true
jsonrpc-core.workspace = true
jsonrpc-core-client.workspace = true
jsonrpc-derive.workspace = true
log.workspace = true
semver.workspace = true
tonic.workspace = true
futures.workspace = true
futures-core.workspace = true
futures-util.workspace = true
thiserror.workspace = true
async-trait = "0.1"
rand = "0.9.1"
dashmap = "5.5.3"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
