[package]
name = "timestampvm"
version = "0.0.21" # https://crates.io/crates/timestampvm
edition = "2021"
rust-version = "1.86.0"
publish = true
description = "Timestamp VM in Rust"
documentation = "https://docs.rs/timestampvm"
license = "BSD-3-Clause"
repository = "https://github.com/ava-labs/timestampvm-rs"
readme = "../README.md"

[dependencies]
avalanche-types = { path = "/home/lc/avalanche-rs-main/crates/avalanche-types", features = ["proto", "subnet", "codec_base64"] }# 更新到支持 RPCChainVM 协议版本 39 的版本
base64 = { version = "0.22.0" }
bytes = "1.6.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
derivative = "2.2.0"
env_logger = "0.11.3"
http-manager = { version = "0.0.14" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-derive = "18.0.0"
log = "0.4.21"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116" # https://github.com/serde-rs/json/releases
serde_with = { version = "3.7.0", features = ["hex"] }
tokio = { version = "1.37.0", features = ["fs", "rt-multi-thread"] }
tonic = { version = "0.13.1", features = ["gzip"] }
futures = "0.3.28"
futures-core = "0.3.28"
futures-util = "0.3.28"

[dev-dependencies]
random-manager = "0.0.5"
