[package]
name = "e2e"
version = "0.1.0"
edition = "2021"
description = "e2e tests for fairvm"

[dependencies]
avalanche-types = { path = "../../avalanche-rs-main/crates/avalanche-types", features = ["subnet", "codec_base64"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
futures = "0.3"
bytes = "1.4"
hex = "0.4"
sha3 = "0.10"
rlp = "0.5"
ethereum-types = "0.12"
primitive-types = "0.12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
dashmap = "5.4"
lru = "0.10"
metrics = "0.20"
metrics-exporter-prometheus = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.3"
test-log = "0.2"
tempfile = "3.7"
mockall = "0.11"
proptest = "1.2"
criterion = "0.5"
